syntax = "proto3";
package delivery;
import "delivery/entry_filter.proto";

message DeleteEntriesRequest {
	string type = 1;
	string tenant_id = 2;
	string id = 3;
	EntryFilter filter = 4;
}

message DeleteEntriesResponse {}
